[gd_scene load_steps=9 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/SawBlade.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Scenes/SawBlade.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.741333, -39.3788, 0, 0, 0, 0, 71.3326, -39.3788, 0, 0, 0, 0, 71.1998, 0.175537, 0, 0, 0, 0, -0.874023, 0.0427856, 0, 0, 0, 0, -0.608521, -39.1133 )
}

[sub_resource type="CircleShape2D" id=2]
radius = 6.11094

[sub_resource type="CircleShape2D" id=3]
radius = 17.2676

[sub_resource type="Animation" id=4]
resource_name = "Modulate"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.49 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Path2D/PathFollow2D/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 187.392

[node name="SawBlade" type="Node2D"]
z_index = 5
script = ExtResource( 2 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -0.741333, -39.3788 )

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Path2D/PathFollow2D/Sprite"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Sprite/Area2D"]
shape = SubResource( 2 )

[node name="PathSpeed" type="Area2D" parent="Path2D/PathFollow2D/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Sprite/PathSpeed"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Modulate = SubResource( 4 )
anims/SawBlade = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="StartingTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Optimizer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Optimizer"]
position = Vector2( -0.721422, -39.3652 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Path2D/PathFollow2D/Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Path2D/PathFollow2D/Sprite/PathSpeed" to="." method="_on_PathSpeed_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StartingTimer" to="." method="_on_StartingTimer_timeout"]
[connection signal="body_entered" from="Optimizer" to="." method="_on_Optimizer_body_entered"]
[connection signal="body_exited" from="Optimizer" to="." method="_on_Optimizer_body_exited"]
